--- a/index.html
+++ b/index.html
@@ -1,143 +1,180 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Loja Virtual - Linha Pós-Cirúrgica e Ortopédica</title>
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    .banner {
-      background: url('banner.jpg') center/cover no-repeat;
-      color: white;
-      text-align: center;
-      padding: 80px 20px;
-    }
-    .product-card {
-      border: 1px solid #eee;
-      border-radius: 8px;
-      padding: 15px;
-      text-align: center;
-      transition: transform 0.2s;
-    }
-    .product-card:hover {
-      transform: scale(1.05);
-    }
-    .selo {
-      font-size: 0.9rem;
-      font-weight: bold;
-      color: #fff;
-      background: #007bff;
-      padding: 3px 8px;
-      border-radius: 12px;
-      display: inline-block;
-      margin-bottom: 8px;
-    }
-    footer {
-      background: #f8f9fa;
-      padding: 20px;
-      text-align: center;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>WPet Hospitalar | Soluções Pós-Cirúrgicas Veterinárias</title>
+
+<meta name="description" content="WPet Hospitalar - Roupas técnicas pós-cirúrgicas e ortopédicas para clínicas e hospitais veterinários.">
+
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="https://unpkg.com/lucide@latest"></script>
+
+<style>
+body { font-family: system-ui, sans-serif; }
+.hidden-sec { display:none; }
+.nav-active { color:#00695C !important; font-weight:700; }
+.hero-bg { background: linear-gradient(135deg,#004D40,#00796B); }
+.product-card:hover { transform: translateY(-4px); transition: 0.3s; }
+</style>
 </head>
-<body>
 
-  <!-- Cabeçalho -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">PetCare Prime</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
-              data-bs-target="#navbarNav" aria-controls="navbarNav" 
-              aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#pos-cirurgica">Linha Pós-Cirúrgica</a></li>
-          <li class="nav-item"><a class="nav-link" href="#ortopedica">Linha Ortopédica</a></li>
-          <li class="nav-item"><a class="nav-link" href="#beneficios">Benefícios</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<body class="bg-slate-50 text-slate-800">
 
-  <!-- Banner Principal -->
-  <section class="banner">
-    <h1>Recuperação segura e moderna para seus pacientes</h1>
-    <p>Conforto, proteção e confiança clínica para cães e gatos</p>
-    <a href="#pos-cirurgica" class="btn btn-primary btn-lg">Solicite condições exclusivas</a>
-  </section>
+<!-- NAV -->
+<nav class="fixed top-0 left-0 right-0 bg-white shadow z-50 h-16 flex justify-between items-center px-6">
+<div class="flex items-center gap-3 cursor-pointer" onclick="showSection('home')">
+<img src="logo.png" class="h-10 w-auto">
+<span class="font-black text-xl">WPet</span>
+</div>
 
-  <!-- Vitrine Linha Pós-Cirúrgica -->
-  <section id="pos-cirurgica" class="container py-5">
-    <h2 class="text-center mb-4">Linha Pós-Cirúrgica</h2>
-    <p class="text-center">Conforto, proteção e confiança clínica para cães e gatos.</p>
-    <div class="row g-4">
-      <!-- Produto exemplo -->
-      <div class="col-md-3">
-        <div class="product-card">
-          <span class="selo">Mais pedido</span>
-          <img src="azul-turquesa.jpg" alt="Azul Turquesa" class="img-fluid mb-3">
-          <h5>Azul Turquesa</h5>
-          <p>A serenidade que transmite confiança clínica.</p>
-          <button class="btn btn-outline-primary">+</button>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="product-card">
-          <span class="selo">Exclusivo</span>
-          <img src="verde-jade.jpg" alt="Verde Jade" class="img-fluid mb-3">
-          <h5>Verde Jade</h5>
-          <p>A sofisticação que protege.</p>
-          <button class="btn btn-outline-primary">+</button>
-        </div>
-      </div>
-      <!-- Adicione os demais produtos seguindo o mesmo padrão -->
-    </div>
-  </section>
+<div class="flex gap-4 text-sm font-semibold">
+<button onclick="showSection('home')" class="nav-btn">Home</button>
+<button onclick="showSection('produtos')" class="nav-btn">Produtos</button>
+<button onclick="showSection('assistente')" class="nav-btn">Assistente</button>
+</div>
+</nav>
 
-  <!-- Vitrine Linha Ortopédica -->
-  <section id="ortopedica" class="container py-5">
-    <h2 class="text-center mb-4">Linha Ortopédica</h2>
-    <p class="text-center">Conforto, proteção e confiança clínica para cães e gatos.</p>
-    <div class="row g-4">
-      <!-- Produto exemplo -->
-      <div class="col-md-3">
-        <div class="product-card">
-          <span class="selo">Mais pedido</span>
-          <img src="azul-turquesa.jpg" alt="Azul Turquesa" class="img-fluid mb-3">
-          <h5>Azul Turquesa</h5>
-          <p>A serenidade que transmite confiança clínica.</p>
-          <button class="btn btn-outline-primary">+</button>
-        </div>
-      </div>
-      <!-- Repita os mesmos produtos da linha pós-cirúrgica -->
-    </div>
-  </section>
+<!-- HOME -->
+<section id="home" class="pt-24 hero-bg text-white text-center pb-24 relative">
+<div class="relative">
+<img src="logo.png" class="h-32 mx-auto mb-4 -mt-10 drop-shadow-xl">
+<h1 class="text-4xl font-bold">Soluções Técnicas Hospitalares</h1>
+<p class="mt-4 max-w-xl mx-auto text-lg opacity-90">
+Roupas pós-cirúrgicas e ortopédicas desenvolvidas para clínicas e hospitais veterinários.
+</p>
+</div>
+</section>
 
-  <!-- Benefícios Institucionais -->
-  <section id="beneficios" class="container py-5">
-    <h2 class="text-center mb-4">Por que escolher nossas soluções?</h2>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Redução de complicações pós-operatórias</li>
-      <li class="list-group-item">Maior satisfação dos tutores</li>
-      <li class="list-group-item">Diferencial competitivo para sua clínica</li>
-      <li class="list-group-item">Estoque garantido e fornecimento contínuo</li>
-    </ul>
-  </section>
+<!-- PRODUTOS -->
+<section id="produtos" class="hidden-sec pt-24 px-6 pb-20">
 
-  <!-- Rodapé -->
-  <footer>
-    <p>&copy; 2026 PetCare Prime - Todos os direitos reservados</p>
-    <p><a href="#contato">Contato</a> | <a href="#">Política de Privacidade</a></p>
-  </footer>
+<h2 class="text-3xl font-bold text-center mb-10">Linha Pós-Cirúrgica</h2>
+<div id="pos-container" class="grid md:grid-cols-4 gap-6 mb-20"></div>
 
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<h2 class="text-3xl font-bold text-center mb-10">Linha Ortopédica</h2>
+<div id="orto-container" class="grid md:grid-cols-4 gap-6"></div>
+
+</section>
+
+<!-- ASSISTENTE -->
+<section id="assistente" class="hidden-sec pt-24 px-6 pb-20 max-w-xl mx-auto">
+
+<h2 class="text-3xl font-bold text-center mb-8">Assistente Inteligente</h2>
+
+<div class="bg-white p-6 rounded-xl shadow space-y-4">
+
+<select id="categoria" class="w-full border p-3 rounded">
+<option value="">Selecione a Categoria</option>
+<option value="Pós-Cirúrgica">Pós-Cirúrgica</option>
+<option value="Ortopédica">Ortopédica</option>
+</select>
+
+<select id="modelo" class="w-full border p-3 rounded">
+<option value="">Selecione Cor ou Estampa</option>
+</select>
+
+<input type="number" id="peso" placeholder="Peso do Pet (kg)" class="w-full border p-3 rounded">
+
+<button onclick="calcular()" class="w-full bg-teal-700 text-white py-3 rounded font-bold">
+Ver Recomendação
+</button>
+
+<div id="resultado" class="bg-slate-100 p-4 rounded text-sm"></div>
+
+</div>
+</section>
+
+<script>
+
+const opcoes = [
+"Azul Céu",
+"Verde Jade",
+"Verde Oceânico",
+"Rosa Candy",
+"Estampa Love",
+"Estampa Zoo Fun",
+"Estampa Yellow Happy",
+"Estampa Marine Care"
+];
+
+const descricaoPadrao = `O tecido possui em sua composição 82,5% Poliéster (PES) e 17,5% Poliuretano (PUE). 
+É um material leve e resistente, desenvolvido para oferecer segurança e conforto em ambientes clínicos. 
+Sua elasticidade garante um ajuste perfeito ao corpo, sem causar desconforto. 
+O toque suave proporciona bem-estar prolongado, tornando o uso mais agradável para o paciente. 
+Apresenta alta durabilidade clínica mesmo após diversas lavagens. 
+Fácil higienização e respirabilidade adequada para recuperação segura.`;
+
+function criarCards(tipo, containerId){
+const container = document.getElementById(containerId);
+opcoes.forEach(nome=>{
+const card = document.createElement("div");
+card.className="bg-white rounded-xl shadow p-4 product-card";
+card.innerHTML=`
+<h3 class="font-bold text-lg mb-2">${tipo} - ${nome}</h3>
+<p class="text-sm mb-3">${descricaoPadrao}</p>
+<button onclick="showSection('assistente'); selecionarAssistente('${tipo}','${nome}')" 
+class="bg-teal-700 text-white px-4 py-2 rounded w-full">
+Selecionar no Assistente
+</button>
+`;
+container.appendChild(card);
+});
+}
+
+criarCards("Pós-Cirúrgica","pos-container");
+criarCards("Ortopédica","orto-container");
+
+function showSection(id){
+document.querySelectorAll("section").forEach(sec=>sec.classList.add("hidden-sec"));
+document.getElementById(id).classList.remove("hidden-sec");
+window.scrollTo(0,0);
+}
+
+const modeloSelect = document.getElementById("modelo");
+
+opcoes.forEach(op=>{
+const option = document.createElement("option");
+option.value = op;
+option.textContent = op;
+modeloSelect.appendChild(option);
+});
+
+function selecionarAssistente(cat,mod){
+document.getElementById("categoria").value = cat;
+document.getElementById("modelo").value = mod;
+}
+
+function calcular(){
+const cat = document.getElementById("categoria").value;
+const mod = document.getElementById("modelo").value;
+const peso = parseFloat(document.getElementById("peso").value);
+
+if(!cat || !mod || !peso){
+document.getElementById("resultado").innerHTML="Preencha todos os campos para continuar.";
+return;
+}
+
+let tamanho="";
+
+if(peso<=5) tamanho="PP";
+else if(peso<=10) tamanho="P";
+else if(peso<=20) tamanho="M";
+else tamanho="G";
+
+document.getElementById("resultado").innerHTML=`
+<strong>Resumo da Seleção:</strong><br>
+Categoria: ${cat}<br>
+Modelo: ${mod}<br>
+Peso informado: ${peso}kg<br><br>
+<strong>Tamanho Recomendado: ${tamanho}</strong><br><br>
+Produto pronto para inclusão em pedido hospitalar.
+`;
+}
+
+showSection("home");
+
+</script>
+
 </body>
 </html>
-
