--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
 <header class="sticky top-0 z-50 w-full bg-white/80 backdrop-blur-md border-b border-[#e7f3f1] px-4 md:px-20 py-4">
 <div class="max-w-[1200px] mx-auto flex items-center justify-between">
 <div class="flex items-center gap-2">
-<div class="text-primary size-8">
-<svg fill="none" viewbox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-<path d="M36.7273 44C33.9891 44 31.6043 39.8386 30.3636 33.69C29.123 39.8386 26.7382 44 24 44C21.2618 44 18.877 39.8386 17.6364 33.69C16.3957 39.8386 14.0109 44 11.2727 44C7.25611 44 4 35.0457 4 24C4 12.9543 7.25611 4 11.2727 4C14.0109 4 16.3957 8.16144 17.6364 14.31C18.877 8.16144 21.2618 4 24 4C26.7382 4 29.123 8.16144 30.3636 14.31C31.6043 8.16144 33.9891 4 36.7273 4C40.7439 4 44 12.9543 44 24C44 35.0457 40.7439 44 36.7273 44Z" fill="currentColor"></path>
-</svg>
-</div>
+<div class="text-primary size-8"><img alt="WPet Logo" class="h-10 w-auto" src="{{DATA:IMAGE:IMAGE_2}}"/></div>
 <h1 class="text-2xl font-black tracking-tight">WPet</h1>
 </div>
 <nav class="hidden md:flex items-center gap-8 text-sm font-semibold">
@@ -111,45 +107,7 @@
                     8 Cores Disponíveis
                 </span>
 </div>
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-<!-- Product Loop - 8 items -->
-<script>
-                    const products = [
-                        { name: "Azul Turquesa", img: "https://images.unsplash.com/photo-1541364983171-a8ba01d95cfc?w=400&q=80" },
-                        { name: "Verde Jade", img: "https://images.unsplash.com/photo-1591768793355-74d7c836038c?w=400&q=80" },
-                        { name: "Verde Oceânico", img: "https://images.unsplash.com/photo-1583511655857-d19b40a7a54e?w=400&q=80" },
-                        { name: "Rosa Candy", img: "https://images.unsplash.com/photo-1537151625747-7ae070b12b53?w=400&q=80" },
-                        { name: "Estampa Love", img: "https://images.unsplash.com/photo-1583512603805-3cc6b41f3edb?w=400&q=80" },
-                        { name: "Estampa Zoo Fun", img: "https://images.unsplash.com/photo-1516734212186-a967f81ad0d7?w=400&q=80" },
-                        { name: "Estampa Yellow Happy", img: "https://images.unsplash.com/photo-1544568100-847a948585b9?w=400&q=80" },
-                        { name: "Estampa Marine Care", img: "https://images.unsplash.com/photo-1530281700549-e82e7bf110d6?w=400&q=80" }
-                    ];
-
-                    document.write(products.map(p => `
-                        <div class="group bg-white rounded-xl overflow-hidden shadow-sm hover:shadow-xl transition-all duration-300 border border-slate-100 flex flex-col">
-                            <div class="aspect-square relative overflow-hidden">
-                                <img src="${p.img}" alt="${p.name}" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500" data-alt="Pet vestindo roupa na cor ${p.name}">
-                                <div class="absolute top-3 right-3 bg-white/90 backdrop-blur px-2 py-1 rounded-md text-[10px] font-bold text-primary shadow-sm uppercase tracking-wide">
-                                    Pós-Cirúrgica
-                                </div>
-                            </div>
-                            <div class="p-5 flex flex-col flex-1">
-                                <h4 class="text-lg font-bold mb-1">${p.name}</h4>
-                                <p class="text-sm text-slate-500 mb-6">Conforto anatômico e tecido respirável.</p>
-                                <div class="mt-auto flex flex-col gap-2">
-                                    <button class="w-full py-2.5 text-xs font-bold text-slate-600 bg-slate-50 hover:bg-slate-100 rounded-lg transition-colors border border-slate-200">
-                                        VER DESCRIÇÃO
-                                    </button>
-                                    <a href="https://wa.me/5524992618871?text=Olá! Gostaria de comprar a Linha Pós-Cirúrgica na cor ${p.name}" class="w-full py-3 bg-primary text-[#0d1b19] font-black text-xs text-center rounded-lg hover:brightness-105 transition-all shadow-lg shadow-primary/20 flex items-center justify-center gap-2">
-                                        COMPRAR VIA ASSISTENTE
-                                        <span class="material-symbols-outlined text-sm">rocket_launch</span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    `).join(''));
-                </script>
-</div>
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6"><!-- Product Loop handled by script below --></div>
 </div>
 </section>
 <!-- Technical Details -->
@@ -215,34 +173,7 @@
                     Suporte Avançado
                 </span>
 </div>
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-<!-- Product Loop - Same 8 items for demo -->
-<script>
-                    document.write(products.map(p => `
-                        <div class="group bg-white rounded-xl overflow-hidden shadow-sm hover:shadow-xl transition-all duration-300 border border-slate-100 flex flex-col">
-                            <div class="aspect-square relative overflow-hidden">
-                                <img src="${p.img}" alt="${p.name}" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 grayscale group-hover:grayscale-0" data-alt="Pet usando roupa ortopédica na cor ${p.name}">
-                                <div class="absolute top-3 right-3 bg-slate-900/90 backdrop-blur px-2 py-1 rounded-md text-[10px] font-bold text-primary shadow-sm uppercase tracking-wide">
-                                    Ortopédica
-                                </div>
-                            </div>
-                            <div class="p-5 flex flex-col flex-1">
-                                <h4 class="text-lg font-bold mb-1">${p.name} Ortop</h4>
-                                <p class="text-sm text-slate-500 mb-6">Reforço estructural e proteção de membros.</p>
-                                <div class="mt-auto flex flex-col gap-2">
-                                    <button class="w-full py-2.5 text-xs font-bold text-slate-600 bg-slate-50 hover:bg-slate-100 rounded-lg transition-colors border border-slate-200">
-                                        VER ESPECIFICAÇÕES
-                                    </button>
-                                    <a href="https://wa.me/5524992618871?text=Olá! Gostaria de comprar a Linha Ortopédica na cor ${p.name}" class="w-full py-3 bg-primary text-[#0d1b19] font-black text-xs text-center rounded-lg hover:brightness-105 transition-all shadow-lg shadow-primary/20 flex items-center justify-center gap-2">
-                                        COMPRAR VIA ASSISTENTE
-                                        <span class="material-symbols-outlined text-sm">support</span>
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    `).join(''));
-                </script>
-</div>
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6"><!-- Product Loop handled by script below --></div>
 </div>
 </section>
 <!-- Assistant Integration Section -->
@@ -282,11 +213,7 @@
 <div class="max-w-[1200px] mx-auto grid md:grid-cols-4 gap-12 mb-16">
 <div class="col-span-1 md:col-span-1">
 <div class="flex items-center gap-2 mb-6">
-<div class="text-primary size-6">
-<svg fill="none" viewbox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
-<path d="M36.7273 44C33.9891 44 31.6043 39.8386 30.3636 33.69C29.123 39.8386 26.7382 44 24 44C21.2618 44 18.877 39.8386 17.6364 33.69C16.3957 39.8386 14.0109 44 11.2727 44C7.25611 44 4 35.0457 4 24C4 12.9543 7.25611 4 11.2727 4C14.0109 4 16.3957 8.16144 17.6364 14.31C18.877 8.16144 21.2618 4 24 4C26.7382 4 29.123 8.16144 30.3636 14.31C31.6043 8.16144 33.9891 4 36.7273 4C40.7439 4 44 12.9543 44 24C44 35.0457 40.7439 44 36.7273 44Z" fill="currentColor"></path>
-</svg>
-</div>
+<div class="text-primary size-6"><img alt="WPet Logo" class="h-8 w-auto" src="{{DATA:IMAGE:IMAGE_2}}"/></div>
 <span class="text-xl font-black">WPet</span>
 </div>
 <p class="text-slate-500 text-sm leading-relaxed mb-6">
@@ -348,4 +275,140 @@
 </div>
 </div>
 </footer>
-</body></html>
+<!-- Assistant Modal -->
+<div class="fixed inset-0 z-[100] hidden flex items-center justify-center p-4" id="assistant-modal">
+<div class="absolute inset-0 bg-slate-900/60 backdrop-blur-sm" onclick="closeAssistant()"></div>
+<div class="relative bg-white w-full max-w-md rounded-2xl shadow-2xl overflow-hidden animate-in fade-in zoom-in duration-300">
+<div class="bg-primary p-6 text-slate-900">
+<div class="flex justify-between items-center">
+<h3 class="font-black text-xl tracking-tight">Assistente WPet</h3>
+<button class="p-2 hover:bg-white/20 rounded-full" onclick="closeAssistant()">
+<span class="material-symbols-outlined">close</span>
+</button>
+</div>
+<p class="text-xs font-bold uppercase opacity-80 mt-1" id="modal-product-title"></p>
+</div>
+<div class="p-6 space-y-6">
+<div id="step-1">
+<p class="font-bold mb-3">Passo 1: Qual o sexo do seu pet?</p>
+<div class="grid grid-cols-2 gap-4">
+<button class="p-4 border-2 border-slate-100 rounded-xl hover:border-primary hover:bg-primary/5 transition-all text-center" onclick="setSex('Fêmea')">
+<span class="material-symbols-outlined block text-3xl mb-1">female</span>
+<span class="font-bold">Fêmea</span>
+</button>
+<button class="p-4 border-2 border-slate-100 rounded-xl hover:border-primary hover:bg-primary/5 transition-all text-center" onclick="setSex('Macho')">
+<span class="material-symbols-outlined block text-3xl mb-1">male</span>
+<span class="font-bold">Macho</span>
+</button>
+</div>
+</div>
+<div class="hidden" id="step-2">
+<p class="font-bold mb-3">Passo 2: Qual o peso aproximado (kg)?</p>
+<input class="w-full p-4 bg-slate-50 border-0 rounded-xl focus:ring-2 focus:ring-primary mb-4" id="pet-weight" placeholder="Ex: 4.5" type="number"/>
+<button class="w-full py-4 bg-primary text-slate-900 font-black rounded-xl" onclick="calculateSize()">Calcular Tamanho</button>
+</div>
+<div class="hidden" id="step-3">
+<p class="font-bold mb-3">Passo 3: Quantas unidades?</p>
+<div class="flex items-center justify-center gap-6">
+<button class="size-12 rounded-full border-2 border-slate-100 flex items-center justify-center font-bold" onclick="changeQty(-1)">-</button>
+<span class="text-3xl font-black" id="pet-qty">1</span>
+<button class="size-12 rounded-full border-2 border-slate-100 flex items-center justify-center font-bold" onclick="changeQty(1)">+</button>
+</div>
+<div class="mt-8 p-4 bg-primary/10 rounded-xl border border-primary/20">
+<p class="text-xs font-bold uppercase text-slate-500">Tamanho Ideal:</p>
+<p class="text-2xl font-black text-primary" id="calculated-size">Carregando...</p>
+</div>
+<div class="grid gap-3 mt-6">
+<button class="w-full py-4 bg-primary text-slate-900 font-black rounded-xl shadow-lg shadow-primary/20 flex items-center justify-center gap-2" onclick="finalizarCompra()">
+                        FINALIZAR COMPRA
+                        <span class="material-symbols-outlined text-sm">shopping_cart_checkout</span>
+</button>
+<button class="w-full py-3 text-slate-400 font-bold text-xs uppercase" onclick="closeAssistant()">Continuar Comprando</button>
+</div>
+</div>
+</div>
+</div>
+</div>
+<a class="fixed bottom-6 right-6 z-[90] bg-[#25D366] text-white p-4 rounded-full shadow-2xl hover:scale-110 transition-transform flex items-center gap-2 group" href="https://wa.me/5524992618871">
+<span class="font-bold text-sm hidden group-hover:block pl-2">Falar no WhatsApp</span>
+<svg class="size-6 fill-current" viewbox="0 0 24 24"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.588-5.946 0-6.556 5.332-11.888 11.888-11.888 3.176 0 6.161 1.237 8.404 3.48s3.481 5.228 3.481 8.408c0 6.556-5.332 11.888-11.888 11.888-2.003 0-3.96-.506-5.717-1.465L0 24zm6.23-4.102c1.65.986 3.272 1.48 4.965 1.48 5.405 0 9.802-4.397 9.802-9.802 0-2.618-1.02-5.08-2.871-6.931s-4.313-2.871-6.931-2.871c-5.405 0-9.802 4.397-9.802 9.802 0 1.821.507 3.597 1.465 5.158l-1.077 3.931 4.049-1.067z"></path></svg>
+</a>
+<script>
+let currentData = { line: '', product: '', sex: '', weight: 0, qty: 1, size: '' };
+
+function openAssistant(line, name) {
+    currentData = { line, product: name, sex: '', weight: 0, qty: 1, size: '' };
+    document.getElementById('modal-product-title').innerText = `${line} - ${name}`;
+    document.getElementById('assistant-modal').classList.remove('hidden');
+    showStep(1);
+}
+
+function closeAssistant() {
+    document.getElementById('assistant-modal').classList.add('hidden');
+}
+
+function showStep(n) {
+    [1, 2, 3].forEach(s => document.getElementById(`step-${s}`).classList.add('hidden'));
+    document.getElementById(`step-${n}`).classList.remove('hidden');
+}
+
+function setSex(s) {
+    currentData.sex = s;
+    showStep(2);
+}
+
+function changeQty(n) {
+    currentData.qty = Math.max(1, currentData.qty + n);
+    document.getElementById('pet-qty').innerText = currentData.qty;
+}
+
+function calculateSize() {
+    const weight = parseFloat(document.getElementById('pet-weight').value);
+    if (!weight) return alert('Por favor, insira o peso.');
+    
+    currentData.weight = weight;
+    let size = 'Sob Consulta';
+
+    if (currentData.sex === 'Fêmea') {
+        if (weight <= 1.5) size = '0';
+        else if (weight <= 2.5) size = '1';
+        else if (weight <= 3.5) size = '2';
+        else if (weight <= 4.5) size = '3';
+        else if (weight <= 6) size = '4';
+        else if (weight <= 8) size = '5';
+        else if (weight <= 10) size = '6';
+        else if (weight <= 13) size = '7';
+        else if (weight <= 17) size = '8';
+        else if (weight <= 21) size = '9';
+        else if (weight <= 27) size = '10';
+        else if (weight <= 33) size = '11';
+        else if (weight <= 40) size = '12';
+        else if (weight <= 48) size = '13';
+        else if (weight <= 56) size = '14';
+        else size = '15';
+    } else {
+        if (weight <= 1.5) size = '1';
+        else if (weight <= 2.5) size = '2';
+        else if (weight <= 3.5) size = '3';
+        else if (weight <= 5) size = '4';
+        else if (weight <= 6) size = '5';
+        else if (weight <= 8) size = '6';
+        else if (weight <= 10) size = '7';
+        else if (weight <= 13) size = '8';
+        else if (weight <= 17) size = '9';
+        else if (weight <= 21) size = '10';
+        else if (weight <= 32) size = '11';
+        else size = '12';
+    }
+
+    currentData.size = size;
+    document.getElementById('calculated-size').innerText = size;
+    showStep(3);
+}
+
+function finalizarCompra() {
+    const msg = `Olá, gostaria de finalizar meu pedido: Categoria: ${currentData.line}, Produto: ${currentData.product}, Tamanho: ${currentData.size}, Quantidade: ${currentData.qty}`;
+    const url = `https://wa.me/5524992618871?text=${encodeURIComponent(msg)}`;
+    window.open(url, '_blank');
+}
+</script></body></html>
